--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,8 +3,9 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src:  ucs-school-lib
-fix: 12.1.1-4A~4.4.0.201905021355
+fix: 12.1.1-5A~4.4.0.201905021737
 desc: |
  * Fixed a bug which prevented domain lists in internetrules to be changed. (Bug #49312).
  * Getting all UDM objects opened every object twice unnecessarily. (Bug #49329).
-bug: [49312, 49329]
+ * Hook execution ist now logged (Bug #48141).
+bug: [49312, 49329, 48141]
