--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,9 +3,10 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-import
-fix: 17.0.6-11A~4.4.0.201905061454
+fix: 17.0.6-12A~4.4.0.201905071149
 desc: |
  * Improved lookup performance of the shipped syntax classes that slowed down the opening of user objects considerably when a lot of schools exist. (Bug #49329).
  * Duplicate hook execution code was removed (Bug #48141).
  * Usernames are now allowed to be longer than <literal>20</literal> characters. <emphasis>Important:</emphasis>  Users with usernames longer than 20 characters are excluded from the support regarding Samba, Samba4 connector app and Active Directory connector app. Users with usernames shorter than 21 are still supported. If Window clients older than <literal>8.1</literal> are in use, the maximum username lenght must not exceed <literal>20</literal>, or logging into them will not be possible! Set <envar>ucsschool/username/max_length</envar> to allow UCR wizards and user import to create users with usernames longer than 20 characters (Bug #47222).
-bug: [49329, 48141, 47222]
+ * The execution time of ou_create_post scripts has been reduced by joining six scripts into two (Bug #49423).
+bug: [49329, 48141, 47222, 49423]
