--- a/doc/errata/staging/ucs-school-ldap-acls-master.yaml
+++ b/doc/errata/staging/ucs-school-ldap-acls-master.yaml
@@ -3,7 +3,8 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-ldap-acls-master
-fix: 
+fix: 17.0.1-1A~4.4.0.201905101706
 desc: |
  * Teachers and Staff cannot modify or create arbitrary shares anymore due to security concerns (Bug #49434).
-bug: [49434]
+ * Due to a ACL problem, multi-OU staff users were not replicated to all administrative school slaves. This problem has been fixed (Bug #48924).
+bug: [48924, 49434]
