--- a/doc/errata/staging/ucs-school-ldap-acls-master.yaml
+++ b/doc/errata/staging/ucs-school-ldap-acls-master.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [4]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-ldap-acls-master
-fix: 
+fix: 16.0.4-1A~4.3.0.201905101711
 desc: |
  * Due to a ACL problem, multi-OU staff users were not replicated to all administrative school slaves. This problem has been fixed (Bug #48924, #49448).
 bug: [49448]
