--- a/doc/errata/staging/ucs-school-metapackage.yaml
+++ b/doc/errata/staging/ucs-school-metapackage.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-metapackage
 fix: 12.0.2-2A~4.4.0.201905161706
 desc: |
- * The installation of school slaves and backups failed, if the join is performed directly within the UCS installer. This problem has now been fixed by activating the online repository during installation if this is not the case. Additionally in such a case, a package update is performed on the joining system which usually will install the latest errata level (Bug #49475).
+ * The installation of school slaves and backups failed, if the join is performed directly within the UCS installer. This problem has now been fixed by activating the online repository during installation if this is not the case (Bug #49475).
 bug: [49475]
