--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -3,8 +3,9 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-exam
-fix: 9.0.1-1A~4.4.0.201905131022
+fix: 9.0.1-2A~4.4.0.201905211706
 desc: |
  * The number of exam backup files is now limited and is compressed into a zip archive by default (Bug #49333).
  * The home folders of exam accounts are now kept by default and are not deleted anymore. Also <envar>ucsschool/exam/user/homedir/autoremove</envar> is unset once upon updating to restore the default behavior. To restore the previous behavior you have to set the variable to <literal>yes</literal> again (Bug #49443).
-bug: [49333, 49443]
+ * A list of exams can now be retrieved with a UMC call (Bug #49519).
+bug: [49333, 49443, 49519]
