--- a/doc/errata/staging/ucs-school-umc-distribution.yaml
+++ b/doc/errata/staging/ucs-school-umc-distribution.yaml
@@ -3,7 +3,8 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-distribution
-fix: 17.0.1-2A~4.4.0.201905101644
+fix: 17.0.1-3A~4.4.0.201905211704
 desc: |
  * The collection of results can now be compressed in a zip archive (used by backup mechanism). (Bug #49333).
-bug: [49333]
+ * Internal improvements required for the exam mode (Bug #49519).
+bug: [49333, 49519]
