--- a/ucs-school-import/debian/control
+++ b/ucs-school-import/debian/control
@@ -55,7 +55,7 @@ Architecture: all
 Depends: ${misc:Depends},
  univention-config,
  ucs-school-import (= ${source:Version}),
- ucs-school-import-http-api-common (>= ${source:Version}),
+ ucs-school-import-http-api-common (= ${source:Version}),
  univention-celery (>=1.0.0-1),
  python-django (>=1.8),
  python-djangorestframework (>= 3.4.0-2),
