--- a/doc/errata/staging/ucs-school-umc-lists.yaml
+++ b/doc/errata/staging/ucs-school-umc-lists.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-lists
 fix: 2.0.0-3A~4.4.0.201905292316
 desc: |
- * Improved compatibility for the exported csv file. The recommended export is using UTF-16 with tabs as separators which seems to be the most compatible format. In case UTF-16 is not supported an UTF-8 export is still available (Bug #48504).
+ * Improved compatibility for the exported CSV file. The recommended export is now using UTF-16 with tabs as separators which seems to be the most compatible format. In case UTF-16 is not supported an UTF-8 export is still available (Bug #48504).
 bug: [48504]
