Bug #49608: Add advisories

--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,8 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-lib
-fix: 12.1.1-7A~4.4.0.201905152002
+fix: 12.1.1-8A~4.4.0.201906071216
 desc: |
  * Create correct hostname for school dc, when not set and not a singleserver (Bug #49462).
-bug: [49462]
+ * Fix value_type of ip_address and mac_address (Bug #49608).
+bug: [49462, 49608]
