--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,8 +3,9 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-lib
-fix: 12.1.1-9A~4.4.0.201906130949
+fix: 12.1.2-0A~4.4.0.201906140838
 desc: |
  * Create correct hostname for school dc, when not set and not a singleserver (Bug #49462).
  * Fix value_type of ip_address and mac_address (Bug #49608).
-bug: [49462, 49608]
+ * Add the role teacher_computer to the lib (Bug #48080).
+bug: [49462, 49608, 48080]
