--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-computerroom
 fix: 11.0.0-3A~4.4.0.201906040844
 desc: |
- * The computer room module now verifies room DNS more rigorous (Bug #43039).
+ * The computer room module now verifies room DNs more rigorous (Bug #43039).
 bug: [43039]
