Bug #49556: advisory update

--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,7 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-import
-fix: 
+fix: 17.0.6-22A~4.4.0.201906181039
 desc: |
  * Fixed hook execution when using the ImportUser class without an import job (Bug #49556).
 bug: [49556]
