Bug #48651: add retry_on_error to 80_move_users_into_another_ou

--- a/ucs-test-ucsschool/debian/control
+++ b/ucs-test-ucsschool/debian/control
@@ -10,7 +10,7 @@ Standards-Version: 3.6.1
 Package: ucs-test-ucsschool
 Architecture: all
 Depends: ucs-test-libs,
- ucs-test-framework,
+ ucs-test-framework (>= 9.0.2-90),
  python-pycurl,
  python-pytest,
  python-attr,
