--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -3,7 +3,15 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-exam
-fix: 9.0.1-8A~4.4.0.201906211118
+fix: 9.0.1-9A~4.4.0.201907151422
 desc: |
  * Teacher computers are now exempt from the internet and share access restrictions during an exam (Bug #48080).
-bug: [48080]
+ * Improve exam mode (Bug #49637).
+ * The group members of exams are now shown in the exam wizard while choosing participating groups (Bug #49554).
+ * Support for unstarted exams in the backend (Bug #49701).
+ * Support for unstarted exams in the frontend (Bug #49744).
+ * Adapt GUI for exam preparation (Bug #49763).
+ * Move wizard data verification to the end (Bug #49765).
+ * Allow exam to be prepared without starting them (Bug #49782).
+ * Adjust overview grid to show more useful information (Bug #49801).
+bug: [48080,49637, 49554, 49701, 49744, 49763, 49765, 49782, 49801]
