--- a/doc/errata/staging/ucs-school-umc-distribution.yaml
+++ b/doc/errata/staging/ucs-school-umc-distribution.yaml
@@ -5,6 +5,6 @@ scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-distribution
 fix: 17.0.1-5A~4.4.0.201907151426
 desc: |
- * Improve exam mode (Bug #49637).
- * Support for unstarted exams in the backend (Bug #49701).
+ * Various improvements have been made to the exam mode, see referenced bugs for details (Bug #49637).
+ * The exam mode backend now supports unstarted exams (Bug #49701).
 bug: [49637, 49701]
