--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -5,7 +5,7 @@ scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-lib
 fix: 12.1.2-1A~4.4.0.201907090931
 desc: |
- * Create correct hostname for school dc, when not set and not a singleserver (Bug #49462).
- * Fix value_type of ip_address and mac_address (Bug #49608).
- * Add the role teacher_computer to the lib (Bug #48080).
+ * The automatically created hostname for school DCs in multi server environments is now correct (Bug #49462).
+ * Internal improvement: The data type of the <literal>ip_address</literal> and <literal>mac_address</literal> values of computer objects has been fixed (Bug #49608).
+ * Internal improvement: the role <literal>teacher_computer</literal> has been added for computers that are used by teachers, so they can be excluded from network access restrictions (Bug #48080).
 bug: [49462, 49608, 48080]
