--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -6,14 +6,14 @@ src: ucs-school-umc-exam
 fix: 9.0.1-12A~4.4.0.201907221622
 desc: |
  * Teacher computers are now exempt from the internet and share access restrictions during an exam (Bug #48080).
- * Improve exam mode (Bug #49637).
+ * Various improvements have been made to the exam mode, see referenced bugs for details (Bug #49637).
  * The group members of exams are now shown in the exam wizard while choosing participating groups (Bug #49554).
- * Support for unstarted exams in the backend (Bug #49701).
- * Support for unstarted exams in the frontend (Bug #49744).
- * Adapt GUI for exam preparation (Bug #49763).
- * Move wizard data verification to the end (Bug #49765).
- * Allow exam to be prepared without starting them (Bug #49782).
- * Adjust overview grid to show more useful information (Bug #49801).
- * Add UMC call to delete unstarted exams (Bug #49859).
- * Add delete action to the overview grid of the exam module (Bug #49884).
+ * The exam mode backend now supports unstarted exams (Bug #49701).
+ * The exam mode frontend now supports unstarted exams (Bug #49744).
+ * The exam mode frontend has been adapted to allow the preparation of exams in advance (Bug #49763).
+ * The input data verification has been moved to the end of the exam configuration wizard (Bug #49765).
+ * Exams are now allowed to be prepared without starting them (Bug #49782).
+ * The exam overview table has been adjusted to show more useful information (Bug #49801).
+ * Internal improvement: a UMC call was added to delete unstarted exams (Bug #49859).
+ * A delete action was added to the exam overview (Bug #49884).
 bug: [48080,49637, 49554, 49701, 49744, 49763, 49765, 49782, 49801, 49859, 49884]
