--- a/doc/errata/staging/ucs-school-umc-rooms.yaml
+++ b/doc/errata/staging/ucs-school-umc-rooms.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-rooms
 fix: 16.1.0-1A~4.4.0.201906261544
 desc: |
- * Teacher computers can now be defined in the room management module (Bug #48080).
+ * Teacher computers can now be defined in the room management module. This is useful if they should be exempt from network access restrictions (Bug #48080).
 bug: [48080]
