Bug #49318: Add legacy import to makefile

--- a/doc/manual/Makefile
+++ b/doc/manual/Makefile
@@ -1,5 +1,5 @@
 #!/usr/bin/make -f
-MAIN := ucsschool-handbuch-4.4 ucsschool-lehrer-handbuch-4.4 ucsschool-lehrer-handbuch-4.4-fr ucsschool-import-handbuch-4.4 ucsschool-szenarien-4.4 ucsschool-umc-import-handbuch-4.4
+MAIN := ucsschool-handbuch-4.4 ucsschool-lehrer-handbuch-4.4 ucsschool-lehrer-handbuch-4.4-fr ucsschool-import-handbuch-4.4 ucsschool-szenarien-4.4 ucsschool-umc-import-handbuch-4.4 ucsschool-import-legacy-4.4
 STYLESHEET := ucsschool
 lang := de
 
