--- a/ucs-test-ucsschool/debian/control
+++ b/ucs-test-ucsschool/debian/control
@@ -13,6 +13,7 @@ Depends: ucs-test-libs,
  ucs-test-framework (>= 9.0.2-90),
  python-pycurl,
  python-pytest,
+ python-mock,
  python-attr,
  eapol,
  ${misc:Depends},
