--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -6,4 +6,4 @@ src: ucs-school-umc-computerroom
 fix: 000
 desc: |
  * Do not execute arbitrary code code from at jobs inside the umc computerroom module if room settings are changed (Bug #50083).
-bug: [50083, 40367]
+bug: [50083]
