--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -3,7 +3,7 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-computerroom
-fix: 
+fix: 11.0.0-4A~4.4.0.201908081356
 desc: |
  * Do not execute arbitrary code code from at jobs inside the umc computerroom module if room settings are changed (Bug #40367).
 bug: [40367]
