Bug #49953: Update advisory

--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -3,7 +3,7 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-exam
-fix:
+fix: 9.0.1-14A~4.4.0.201908091031
 desc: |
  * During an exam the exam folder in exam users homes are now immutable (Bug #49953).
 bug: [49953]
