--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-exam
 fix: 9.0.1-14A~4.4.0.201908091031
 desc: |
- * During an exam the exam folder in exam users homes are now immutable (Bug #49953).
+ * During an exam the exam folder in the exam users home cannot be removed or renamed anymore (Bug #49953).
 bug: [49953]
