--- a/ucs-school-lib/modules/requirements.txt
+++ b/ucs-school-lib/modules/requirements.txt
@@ -4,4 +4,5 @@ python-ldap
 ruamel.yaml
 six
 univention-config-registry>=14
-# univention-lib ?
+univention-directory-manager-modules
+univention-lib
