Bug #50087: add tests from BB-API to ucsschool, make request target configurable

--- a/ucs-test-ucsschool/debian/control
+++ b/ucs-test-ucsschool/debian/control
@@ -15,6 +15,7 @@ Depends: ucs-test-libs,
  python-pytest,
  python-mock,
  python-attr,
+ python-requests,
  eapol,
  ${misc:Depends},
  python-ucs-school (>= 12.1.0-15),
