Bug #50116: update advisory

--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,7 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-import
-fix: 
+fix: 17.0.12A~4.4.0.201909061131
 desc: |
  * A script (fix_ucsschool_slaves) has been added that automatically fixes broken domaincontroller slave object.
    This script is automatically by the join script of the package <packagename>ucs-school-import</packagename>.
