--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,9 +3,10 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-import
-fix: 17.0.12A~4.4.0.201909061131
+fix: 17.0.13A~4.4.0.201909100937
 desc: |
  * A script (fix_ucsschool_slaves) has been added that automatically fixes broken domaincontroller slave object.
-   This script is automatically by the join script of the package <packagename>ucs-school-import</packagename>.
-   To prevent the automatic correction, set the UCR variable <envar>ucsschool/update/skip-slave-object-correction=true</envar> (Bug #50116).
+   This script is started automatically by the join script of the package <packagename>ucs-school-import</packagename>.
+   To prevent the automatic correction, set the UCR variable <envar>ucsschool/update/skip-slave-object-correction=true</envar> before updating.
+   All checks and changes are recorded in the log file <filename>/var/log/univention/ucsschool-fix-slave-objects.log</filename>(Bug #50116).
 bug: [50116]
