--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -5,6 +5,7 @@ scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-exam
 fix: 9.0.1-15A~4.4.0.201909041517
 desc: |
- * During an exam the exam folder in the exam users home cannot be removed or renamed anymore (Bug #49953).
- * Add login restrictions for exam and original users during running exams (Bug #49960).
+ * During an exam the exam folder in the exam users home cannot be removed or renamed anymore.
+   This change prevents problems collecting the exam if the exam folder has been accidentally modified (Bug #49953).
+ * A login restrictions for exam and original users during running exams (Bug #49960).
 bug: [49953, 49960]
