--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -7,7 +7,7 @@ fix: 17.0.13A~4.4.0.201909100937
 desc: |
  * A script (<command>/usr/share/ucs-school-import/scripts/fix_ucsschool_slaves</command>) has been added that automatically
    fixes broken domaincontroller slave object.
-   This script is started automatically by the join script of the package <packagename>ucs-school-import</packagename>.
+   This script is started automatically by the join script of the package <package>ucs-school-import</package>.
    To prevent the automatic correction, set the UCR variable <envar>ucsschool/update/skip-slave-object-correction=true</envar> before updating.
    All checks and changes are recorded in the log file <filename>/var/log/univention/ucsschool-fix-slave-objects.log</filename>(Bug #50116).
 bug: [50116]
