--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -3,7 +3,7 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-computerroom
-fix:
+fix: 11.0.0-5A~4.4.0.201909120915
 desc: |
  * Add a safety dialog when attempting to close the computerroom module without ending the exam beforehand (Bug #49907).
 bug: [49907]
