--- a/ucs-school-webproxy/conffiles/etc/apache2/sites-available/wpad.conf
+++ b/ucs-school-webproxy/conffiles/etc/apache2/sites-available/wpad.conf
@@ -1,3 +1,5 @@
+@%@UCRWARNING=# @%@
+
 # add MIME types for WPAD configuration files
 AddType application/x-ns-proxy-autoconfig wpad.dat
 AddType application/x-ns-proxy-autoconfig proxy.pac
