Bug #49902: update advisory

--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -8,5 +8,5 @@ desc: |
  * During an exam the exam folder in the exam users home cannot be removed or renamed anymore.
    This change prevents problems collecting the exam if the exam folder has been accidentally modified (Bug #49953).
  * A login restrictions for exam and original users during running exams (Bug #49960).
- * A proper error message is shown, when tryig to create an exam with a name that is already in use (Bug #49902).
+ * A proper error message is shown, when trying to create an exam with a name that is already in use (Bug #49902).
 bug: [49953, 49960, 49902]
