code linter, formatter, coverage, test samples, packaging

--- a/kelvin-api/setup.cfg
+++ b/kelvin-api/setup.cfg
@@ -2,4 +2,13 @@
 test = pytest
 
 [tool:pytest]
-addopts = --verbose --showlocals app/tests
+addopts = --verbose --showlocals ucsschool/kelvin/tests
+
+[flake8]
+max-line-length = 90
+
+[coverage:report]
+exclude_lines =
+  pragma: no cover
+  raise NotImplementedError
+  return NotImplemented
