--- a/ucs-school-radius-802.1x/debian/rules
+++ b/ucs-school-radius-802.1x/debian/rules
@@ -31,6 +31,8 @@
 # /usr/share/common-licenses/AGPL-3; if not, see
 # <http://www.gnu.org/licenses/>.
 
+export PYBUILD_NAME=ucs-school-radius-802.1x
+
 override_dh_auto_install:
 	dh_auto_install
 	univention-install-config-registry
@@ -40,4 +42,4 @@ override_dh_auto_test:
 	ucslint
 
 %:
-	dh $@ --with python_support
+	dh $@ --with python2 --buildsystem=pybuild
