move tests out of product code

--- a/kelvin-api/setup.cfg
+++ b/kelvin-api/setup.cfg
@@ -2,7 +2,7 @@
 test = pytest
 
 [tool:pytest]
-addopts = --verbose --showlocals --cov=ucsschool.kelvin --cov=ucsschool/kelvin/tests ucsschool/kelvin/tests
+addopts = --verbose --showlocals --cov=tests --cov=ucsschool.kelvin tests
 [flake8]
 max-line-length = 90
 
@@ -11,6 +11,6 @@ exclude_lines =
   pragma: no cover
   raise NotImplementedError
   return NotImplemented
-# TODO: raise until 100:
-  fail_under = 10
-  show_missing = true
+# TODO: raise until reaching 100%:
+fail_under = 10
+show_missing = true
