--- a/ucs-school-netlogon-user-logonscripts/debian/control
+++ b/ucs-school-netlogon-user-logonscripts/debian/control
@@ -2,24 +2,64 @@ Source: ucs-school-netlogon-user-logonscripts
 Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
-Build-Depends: debhelper (>> 7.0),
+Build-Depends:
+ debhelper (>> 9.0),
  univention-config-dev,
  ucslint,
- dh-systemd
+ dh-systemd,
+ dh-python,
+ python-debian,
+ python-all,
+ python3-all,
 Standards-Version: 3.8.2
 
 Package: ucs-school-netlogon-user-logonscripts
 Architecture: all
-Depends: univention-config-registry,
+Depends:
+ univention-config-registry,
  univention-ldap-client,
  univention-directory-manager-tools,
  univention-directory-listener,
  ucs-school-netlogon,
  shell-univention-lib,
- univention-config
+ univention-config,
+ python-ucs-school-netlogon-user-logonscripts | python3-ucs-school-netlogon-user-logonscripts,
 Description: UCS@school userspecific netlogon scripts
  This package provides a listener-module that creates
  specific netlogon scripts for each local user.
+ .
+ It is part of Univention Corporate Server (UCS), an
+ integrated, directory driven solution for managing
+ corporate environments. For more information about UCS,
+ refer to: http://www.univention.de/
+
+Package: python-ucs-school-netlogon-user-logonscripts
+Architecture: all
+Depends:
+ ${python:Depends},
+ univention-config-registry,
+ python-ucs-school-namespace,
+Provides:
+ ${python:Provides},
+Description: UCS@school userspecific netlogon scripts
+ This package contains Python modules used by the main
+ package ucs-school-netlogon-user-logonscripts.
+ .
+ It is part of Univention Corporate Server (UCS), an
+ integrated, directory driven solution for managing
+ corporate environments. For more information about UCS,
+ refer to: http://www.univention.de/
+
+Package: python3-ucs-school-netlogon-user-logonscripts
+Architecture: all
+Depends:
+ ${python3:Depends},
+ univention-config-registry,
+Provides:
+ ${python3:Provides},
+Description: UCS@school userspecific netlogon scripts
+ This package contains Python modules used by the main
+ package ucs-school-netlogon-user-logonscripts.
  .
  It is part of Univention Corporate Server (UCS), an
  integrated, directory driven solution for managing
