--- a/ucs-school-netlogon-user-logonscripts/debian/rules
+++ b/ucs-school-netlogon-user-logonscripts/debian/rules
@@ -29,6 +29,8 @@
 # /usr/share/common-licenses/AGPL-3; if not, see
 # <http://www.gnu.org/licenses/>.
 
+export PYBUILD_NAME=ucs-school-netlogon-user-logonscripts
+
 override_dh_auto_test:
 	ucslint
 	dh_auto_test
@@ -38,4 +40,4 @@ override_dh_auto_install:
 	dh_auto_install
 
 %:
-	dh $@ --with python_support --with systemd
+	dh $@ --with python2 --buildsystem=pybuild --with systemd
