Bug #50325: add missing dependencies

--- a/ucs-test-ucsschool/debian/control
+++ b/ucs-test-ucsschool/debian/control
@@ -12,19 +12,31 @@ Standards-Version: 3.6.1
 
 Package: ucs-test-ucsschool
 Architecture: all
-Depends: ucs-test-libs,
- ucs-test-framework (>= 9.0.2-90),
- python-univention (>= 12.0.0-5),
+Depends: eapol,
  python-pycurl,
+ python3-pycurl,
  python-pytest,
+ python3-pytest,
  python-mock,
+ python3-mock,
  python-attr,
+ python3-attr,
+ python-lazy-object-proxy,
+ python3-lazy-object-proxy,
+ python-psutil,
+ python3-psutil,
  python-requests,
- eapol,
+ python3-requests,
  ${misc:Depends},
  ${python:Depends},
  ${python3:Depends},
  python-ucs-school (>= 12.1.0-15),
+ python-univention (>= 12.0.0-5),
+ python3-univention (>= 12.0.0-5),
+ python-univention-config-registry,
+ python3-univention-config-registry,
+ ucs-test-libs,
+ ucs-test-framework (>= 9.0.2-90),
 Provides: ucs-test-module,
  ${python:Provides},
  ${python3:Provides},
