--- a/ucs-school-lib/debian/rules
+++ b/ucs-school-lib/debian/rules
@@ -36,6 +36,15 @@ override_dh_auto_install:
 
 override_dh_auto_test:
 	ucslint
+	dh_auto_test
+
+override_dh_auto_build:
+	make l10n
+	dh_auto_build
+
+override_dh_auto_clean:
+	make clean
+	dh_auto_clean
 
 %:
-	dh $@ --with python_support
+	dh $@ --with python2,python3 --buildsystem=pybuild
